# AtelierEsri

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
MacOS/: .clang-format  .gitignore  Alert.cpp  Alert.hpp  App.cpp  App.hpp  AppResources.h  AppResources.r  AtelierEsri.r  CMakeLists.txt  Control.cpp  Control.hpp  Debug.cpp  Debug.hpp  Drawing.cpp  Drawing.hpp  Env.cpp  Env.hpp  Error.cpp  Error.hpp  Exception.cpp  Exception.hpp  GWorld.cpp  GWorld.hpp  Game.cpp  Game.hpp  InventoryController.cpp  InventoryController.hpp  MaskedImage.cpp  MaskedImage.hpp  MaskedPict.cpp  MaskedPict.hpp  Material.cpp  Material.hpp  README.md  Resource.hpp  Result.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Strings.cpp  (+5 more)
MacOS/AtelierInterior/: AtelierInteriorGameMode.cpp  AtelierInteriorGameMode.hpp
MacOS/Breeze/: Alchemy.cpp  Alchemy.hpp  AlchemyTest.cpp  EnumSet.hpp
MacOS/Breeze/BinIO/: BinIOTest.cpp  MemReader.hpp  StreamReader.hpp
MacOS/Breeze/Geometry/: R2.hpp  V2.hpp
MacOS/Cinematic/: CinematicGameMode.cpp  CinematicGameMode.hpp
MacOS/Inventory/: InventoryCell.cpp  InventoryCell.hpp  InventoryController.cpp  InventoryController.hpp  InventoryPickerGameMode.cpp  InventoryPickerGameMode.hpp
MacOS/Synthesis/: ElementValueDisplay.cpp  ElementValueDisplay.hpp  SynthesisCell.cpp  SynthesisCell.hpp  SynthesisController.cpp  SynthesisController.hpp  SynthesisDashboard.cpp  SynthesisDashboard.hpp  SynthesisGameMode.cpp  SynthesisGameMode.hpp
MacOS/Walkaround/: Tilemap.hpp  WalkaroundGameMode.cpp  WalkaroundGameMode.hpp
MacOS/src/: Alert.cpp  Alert.hpp  App.cpp  AppResources.r  Control.cpp  Debug.cpp  Debug.hpp  Design.hpp  Drawing.cpp  Drawing.hpp  Env.cpp  Exception.hpp  GWorld.cpp  Game.cpp  Game.hpp  MaskedImage.cpp  Material.hpp  SpriteSheet.cpp  Strings.cpp  Window.hpp
MacOS/src/AtelierInterior/: AtelierInteriorGameMode.hpp
MacOS/src/Breeze/: Alchemy.hpp  Cinematics.cpp  Cinematics.hpp  Strings.hpp
MacOS/src/Breeze/BinIO/: BinIO.hpp
MacOS/src/Breeze/Geometry/: C2.hpp  IntersectsTest.cpp  R2.hpp  V2.hpp
MacOS/src/Cinematic/: CinematicGameMode.cpp
MacOS/src/Inventory/: InventoryController.cpp
MacOS/src/Synthesis/: ElementValueDisplay.hpp  SynthesisCell.cpp  SynthesisCell.hpp  SynthesisController.cpp  SynthesisGameMode.cpp
MacOS/src/Walkaround/: Tilemap.cpp
MacOS/vcpkg configuration/: README.md  m68k-apple-macos.cmake  powerpc-apple-macos-carbon.cmake  powerpc-apple-macos.cmake
PICO-8/: aemath.lua  aemath_test.lua  alchemy.lua  atelier_esri.p8  draw.lua  init.lua  input.lua  math.lua  oop.lua  pico8_compat.lua  pico8_compat_test.lua
ae-wasm4/: Cargo.toml  build.rs
ae-wasm4/src/: audio.rs  audio_data.rs  gfx_data.rs  input.rs  intro.rs  lib.rs  map_data.rs
aesprite/: Cargo.toml
aesprite/src/: lib.rs
aetools/: Cargo.toml
aetools-derive/: Cargo.toml
aetools-derive/src/: lib.rs
aetools/src/: AETypes.r  assets.rs  fsutil.rs  grey_quantizer.rs  histogram.rs  image2bit.rs  implicit_tree.rs  items.rs  mac_assets.rs  mac_icon.rs  main.rs  palettes.rs  pokepak.rs  tileshred.rs  unisprite.rs
aetools/src/ext/: aseprite.rs  imagemagick.rs  mod.rs
aetools/src/mac/: mod.rs  palette.rs
aetools/src/mac/resource/: icon.rs  mod.rs
aetools/src/mac/resource/icon/: color.rs  io.rs  list_1bit.rs  masked_1bit.rs  mod.rs  paletted.rs  single_1bit.rs
aetools/src/mac_assets/: AETypes.r  cinematic.rs  mod.rs  tiled.rs
aetools/src/pico8/: custom_character.rs  custom_font.rs  item_sprite.rs  mod.rs  palette.rs
asset_originals/: Allie.aseprite  Allie.pixaki  Esri.aseprite  Esri.pixaki  Kenney-MonochromeRPG.tsx  Kenney_monochromerpg_extended.tsx  New title screen.aseprite  New title screen.pixaki  New title screen.procreate  Sae 3-4.aseprite  Sae 3-4.pixaki  Sae.aseprite  Sae.pixaki  Village.tmx  atelier interior.aseprite  atelier interior.pixaki  atelier_interior.aseprite  bg-bricks.aseprite  cursor.aseprite  element.aseprite  fantasy-tileset.aseprite  items.json  roguelikeitems.aseprite  status.aseprite  title screen.aseprite  title screen.p8  village-1bit.aseprite
asset_originals/cinematics/: alchemy slightly explained.aecinematic
asset_originals/items/: item_dragon_eye.aseprite  item_feather.aseprite  item_gravistone.aseprite  item_ice_bomb.aseprite  (+7 more)
notes/: design.md
src/: alchemy.rs  asset_data.rs  audio.rs  audio_data.rs  font.rs  font_data.rs  gfx.rs  gfx_data.rs  intro.rs  lib.rs  map_data.rs  walkaround.rs
tools/: Cargo.toml
tools/.cargo/: config.toml
tools/src/: grey_quantizer.rs  image2bit.rs  items.rs  lo5.rs  main.rs  pokepak.rs  tileshred.rs
(+20 files in other folders)
