[package]
name = "atelier_esri"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/VyrCossont/AtelierEsri"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = { version = "0.4.1", optional = true }

[profile.release]
opt-level = "z"
lto = true
strip = true

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]

[build-dependencies]
walkdir = "2"
