[package]
name = "aetools"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/VyrCossont/AtelierEsri"
license = "MIT"

[dependencies]
png = "0.17.6"
clap = { version = "3.2.19", features = ["derive"] }
anyhow = "1.0.63"
# Must be same version used by Deku.
bitvec = "0.22.3"
divrem = "1.0.0"
deku = "0.13.1"
image  = "0.24.3"
itertools = "0.10.5"
serde = "1.0.145"
serde_json = "1.0.85"
schemars = { version = "0.8.10", features = ["enumset", "preserve_order"] }
enumset = { version = "1.0.11", features = ["serde"] }
indexmap = { version = "1.9.1", features = ["serde"] }
